[gd_scene load_steps=13 format=3 uid="uid://0678vr22o4iw"]

[ext_resource type="Script" path="res://scripts/testing.gd" id="1_1r6c3"]
[ext_resource type="PackedScene" uid="uid://7ba5xuy72rle" path="res://scenes/player.tscn" id="1_bvkqp"]
[ext_resource type="PackedScene" uid="uid://cnl6h4mlpa1ph" path="res://scenes/mob.tscn" id="2_tk547"]
[ext_resource type="PackedScene" uid="uid://db0706gjw42bh" path="res://scenes/in_game_ui.tscn" id="3_h3uny"]
[ext_resource type="PackedScene" uid="uid://c7rpyaywt0lkv" path="res://scenes/mob_spawner.tscn" id="3_sx372"]
[ext_resource type="Shader" path="res://shaders/testing.gdshader" id="5_2mjie"]
[ext_resource type="Script" path="res://scripts/layer_functionality.gd" id="6_3tf7t"]
[ext_resource type="Texture2D" uid="uid://bd8m5y630wm5x" path="res://graphics/seabg.png" id="7_tgass"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7foh6"]
shader = ExtResource("5_2mjie")
shader_parameter/Shift_Hue = null

[sub_resource type="Gradient" id="Gradient_u0n2c"]
colors = PackedColorArray(0.0588235, 0.411765, 0.529412, 0.498039, 0, 0, 0.572549, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_a0t0h"]
noise_type = 2
frequency = 0.001

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xrx4k"]
seamless = true
seamless_blend_skirt = 1.0
color_ramp = SubResource("Gradient_u0n2c")
noise = SubResource("FastNoiseLite_a0t0h")

[node name="Testing" type="Node2D"]
script = ExtResource("1_1r6c3")
small_fish = ExtResource("2_tk547")
same_fish = ExtResource("2_tk547")
big_fish = ExtResource("2_tk547")
biggest_fish = ExtResource("2_tk547")

[node name="Player" parent="." instance=ExtResource("1_bvkqp")]
position = Vector2(207, 92)

[node name="Mob Spawner" parent="." instance=ExtResource("3_sx372")]

[node name="In-game UI" parent="." instance=ExtResource("3_h3uny")]

[node name="Game Timer" type="Timer" parent="."]

[node name="UI Update Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="Polygon2D" parent="Background"]
z_index = -5
texture_repeat = 2
material = SubResource("ShaderMaterial_7foh6")
position = Vector2(220, 217)
scale = Vector2(0.679691, 0.286928)
color = Color(1, 1, 1, 0)
texture = SubResource("NoiseTexture2D_xrx4k")
polygon = PackedVector2Array(-1455.07, -2596.47, 1509.51, -2742.85, 1625.74, 1547.43, -1611.03, 1582.28)
uv = PackedVector2Array(-115.605, -406, 640.568, -399, 635.944, 469, -114.182, 482)

[node name="Background Sprite 2" type="Sprite2D" parent="Background"]
z_index = -6
position = Vector2(213, 43)
rotation = 3.14159
scale = Vector2(2, 2)
texture = ExtResource("7_tgass")

[node name="Layer functionality" type="Node" parent="."]
script = ExtResource("6_3tf7t")

[node name="Mobs" type="Node" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="camera_resize_request" from="Player" to="." method="_on_player_camera_resize_request"]
[connection signal="collided" from="Player" to="." method="_on_player_collided"]
[connection signal="gained_size" from="Player" to="In-game UI" method="_on_player_gained_size"]
[connection signal="perish" from="Player" to="." method="game_over"]
[connection signal="request_transition" from="Player" to="." method="_on_player_request_transition"]
[connection signal="take_hit" from="Player" to="." method="_on_player_take_hit"]
[connection signal="won_game" from="In-game UI" to="." method="game_win"]
[connection signal="timeout" from="Game Timer" to="." method="game_over"]
[connection signal="timeout" from="UI Update Timer" to="." method="_on_ui_update_timer_timeout"]

[editable path="Player"]
